1、webpack中 加入 css、less 支持模块 2、自动添加浏览器前缀 3、webpack中 加入 图片资源loader 4、加入 config 配置项 5、加入css样式分离

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>从零开始搭建react工程</title>
+  <title>React</title>
 </head>
-<body>
-<script src="../dist/bundle.js"></script>
+<body id="root">
 </body>
 </html>
